feat: add traffic accounting panel api
